<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">iCoser</string>
    <string name="app_type">release</string>
    <string name="file_provider_authority">com.fixeam.icoser.provider</string>
    <string name="home">首页</string>
    <string name="smart_video">小视频</string>
    <string name="search">搜索</string>
    <string name="user">用户</string>
    <string name="following">关注</string>
    <string name="unfollow">取消关注</string>
    <string name="followed">已关注</string>
    <string name="new_">最新发布</string>
    <string name="hot">最热推荐</string>
    <string name="view_album_video">查看写真集视频</string>
    <string name="view_model_video">查看模特视频</string>
    <string name="login">登录</string>
    <string name="un_log_user">未登录用户</string>
    <string name="go_login">去登录</string>
    <string name="account">账号</string>
    <string name="logout">退出登录</string>
    <string name="username_phone_or_mail">用户名/手机号/电子邮箱</string>
    <string name="password">密码</string>
    <string name="login_with_account_and_password">通过账号密码登录</string>
    <string name="login_with_verify_code">通过验证码登录</string>
    <string name="phone_or_mail">手机号或电子邮箱</string>
    <string name="verify_code">验证码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="second_later_resend">秒后重发</string>
    <string name="view_album">查看写真集</string>
    <string name="view_model">查看模特</string>
    <string name="view_info">查看详细信息</string>
    <string name="forbidden">屏蔽内容</string>
    <string name="blocked">用户已屏蔽</string>
    <string name="forbidden_album">屏蔽此写真集</string>
    <string name="forbidden_model">屏蔽此模特</string>
    <string name="share">分享</string>
    <string name="collection">收藏</string>
    <string name="media_collection">喜爱视频</string>
    <string name="uncollection">取消收藏</string>
    <string name="create_collection_fold">创建收藏夹</string>
    <string name="close">关闭</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="download">下载</string>
    <string name="change_media">切换视频</string>
    <string name="change_ratio">切换清晰度</string>
    <string name="app_launch">应用正在启动中</string>
    <string name="app_display_name">iCoser 写真分享</string>
    <string name="latest_create_time">最近更新时间</string>
    <string name="albums_number">写真集数量</string>
    <string name="hot_view">热门浏览</string>
    <string name="hot_search">热搜关键词</string>
    <string name="search_history">搜索历史</string>
    <string name="search_no_result">搜索结果为空~</string>
    <string name="from_collection">来自已经收藏的项目</string>
    <string name="from_follow">来自您的关注</string>
    <string name="from_push">推荐内容</string>
    <string name="model_name">模特名称</string>
    <string name="publish_content">动态内容</string>
    <string name="has_update">当前软件版本存在更新, 是否立即下载并安装更新? </string>
    <string name="downloading_update">正在下载更新: </string>
    <string name="version_change">版本变化: </string>
    <string name="app_version">当前软件版本</string>
    <string name="running_platform">软件运行平台</string>
    <string name="sdk_version">Android SDK 版本</string>
    <string name="update">软件更新</string>
    <string name="view_update_log">查看本次更新内容</string>
    <string name="update_right_now">立即更新</string>
    <string name="do_not_alert_this_version">不再提示此版本</string>
    <string name="install_update">安装更新</string>
    <string name="user_inform">个人资料</string>
    <string name="safe_center">安全中心</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_following">我的关注</string>
    <string name="my_history">历史记录</string>
    <string name="setting">设置</string>
    <string name="about">关于iCoser</string>
    <string name="collection_fold_select">选择收藏夹</string>
    <string name="official_website">网页端</string>
    <string name="fixeam_official_website">Fixeam业务官网</string>
    <string name="copyright" tools:ignore="TypographyDashes">Copyright ⓒ 2020-2024 Fixeam. All Right Reserved</string>
    <string name="email_admin">站长邮箱：1790141618@qq.com</string>
    <string name="beian" tools:ignore="TypographyDashes">湘ICP备2020023534号-1</string>
    <string name="default_display">小视频清晰度</string>
    <string name="ratio_2160p">2160p UHD 4K</string>
    <string name="ratio_1080p">1080p FHD</string>
    <string name="ratio_1440p">1440p QHD 2K</string>
    <string name="ratio_720p">720p HD</string>
    <string name="ratio_540p">540p</string>
    <string name="preferences">偏好设置</string>
    <string name="caching">缓存设置</string>
    <string name="color_theme">颜色主题</string>
    <string name="cache_size">已缓存大小</string>
    <string name="set_max_cache_size">最大允许的缓存</string>
    <string name="cache_clear">清除当前缓存</string>
    <string name="empty">暂无相关内容~</string>
    <string name="remove">移除</string>
    <string name="time_range">时间节点</string>
    <string name="default_notification_channel_id">10001</string>
    <string name="default_notification_channel_name">iCoser</string>
    <string name="notification_push">消息推送</string>
    <string name="permission_required">App需要通知权限才能向您发送您关注的最新动态</string>
    <string name="ok">OK</string>
    <string name="user_avatar">用户头像</string>
    <string name="user_nickname">用户昵称</string>
    <string name="username">用户名</string>
    <string name="user_identity">用户身份</string>
    <string name="user_phone">手机号</string>
    <string name="user_mail">邮箱</string>
    <string name="user_location">地区</string>
    <string name="user_birthday">用户生日</string>
    <string name="first_level">第一级</string>
    <string name="second_level">第二级</string>
    <string name="third_level">第三级</string>
    <string name="fourth_level">第四级</string>
    <string name="cascader_title">请选择</string>
    <string name="more_option">更多选项</string>
    <string name="media_appreciate">视频点赞</string>
    <string name="media_favor">视频收藏</string>
</resources>