<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about_page.AboutActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorOnBackground"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:subtitleTextAppearance="@style/Toolbar.SubTitleText"
        app:title="@string/about"
        android:elevation="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginVertical="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22sp"
            android:text="@string/app_name"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:layout_marginHorizontal="12dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="7dp">

            <LinearLayout
                android:id="@+id/option_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/beian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12sp"
            android:padding="10dp"
            android:text="@string/beian"
            android:textFontWeight="700"
            android:textColor="#165DFF"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="11sp"
            android:text="@string/copyright"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="11sp"
            android:layout_marginTop="10dp"
            android:text="@string/email_admin"/>

    </LinearLayout>

</LinearLayout>