<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mode_2"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="24dp"
    android:layout_marginBottom="120dp"
    android:visibility="gone">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textAlignment="center"
        android:text="@string/login_with_verify_code"
        android:layout_marginVertical="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_or_mail"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="0.5dp"
        app:hintTextAppearance="@style/CustomHintTextAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:textSize="13sp"
            android:maxLength="24"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/verify_code"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxStrokeWidth="0.5dp"
            app:hintTextAppearance="@style/CustomHintTextAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="13sp"
                android:maxLength="6"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="?attr/colorOnBackground"
            android:textSize="13sp"
            android:textFontWeight="700"
            android:text="@string/send_verify_code"
            android:textColor="?attr/colorPrimary"
            app:strokeWidth="0.5sp"
            app:strokeColor="?attr/colorOnTertiary"
            app:cornerRadius="5dp"
            android:layout_marginStart="5dp"
            android:insetBottom="0dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_mode_to_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="?attr/colorOnBackground"
        android:textSize="13sp"
        android:textFontWeight="700"
        android:text="@string/login_with_account_and_password"
        android:textColor="?attr/colorPrimary"
        app:strokeWidth="0.5sp"
        app:strokeColor="?attr/colorOnTertiary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="13sp"
        android:textFontWeight="700"
        android:text="@string/login"
        android:textColor="@color/white"
        android:backgroundTint="@color/brand_primary" />

</LinearLayout>