<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_square"
    android:orientation="vertical"
    android:padding="12dp" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginVertical="3dp"
        android:layout_marginHorizontal="5dp"
        android:textFontWeight="600"
        android:text="@string/cascader_title"
        android:maxLines="1"
        android:ellipsize="end"/>

    <LinearLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/first_level"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:textAlignment="center"
            android:textSize="13sp"
            android:text="@string/first_level"
            android:maxLines="1"
            android:ellipsize="end"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/second_level"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:textAlignment="center"
            android:textSize="13sp"
            android:text="@string/second_level"
            android:maxLines="1"
            android:ellipsize="end"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/third_level"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:textAlignment="center"
            android:textSize="13sp"
            android:text="@string/third_level"
            android:maxLines="1"
            android:ellipsize="end"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/fourth_level"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:textAlignment="center"
            android:textSize="13sp"
            android:text="@string/fourth_level"
            android:maxLines="1"
            android:ellipsize="end"
            android:visibility="gone"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <View
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="?attr/colorOnTertiary"/>

        <LinearLayout
            android:id="@+id/level_block"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center">

            <View
                android:layout_width="20dp"
                android:layout_height="5dp"
                android:background="?attr/colorOnTertiary"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/data_view_page"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/danger"
        android:text="@string/cancel"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp" />

</LinearLayout>