<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"
        android:text="Model And Album Name" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorOnTertiary"
        app:cardCornerRadius="7dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/poster_info"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:scaleType="fitCenter"
            android:src="@drawable/image_holder" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="15dp" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:textColor="?attr/colorPrimary"
            android:text="@string/view_album"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/album"
            app:iconTint="?attr/colorPrimary"
            app:cornerRadius="7dp"
            app:strokeColor="?attr/colorOnTertiary"
            app:strokeWidth="0.5sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:textColor="?attr/colorPrimary"
            android:text="@string/view_model"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/profile"
            app:iconTint="?attr/colorPrimary"
            app:cornerRadius="7dp"
            app:strokeColor="?attr/colorOnTertiary"
            app:strokeWidth="0.5sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:textColor="?attr/colorPrimary"
            android:text="@string/collection"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/favor"
            app:iconTint="?attr/colorPrimary"
            app:cornerRadius="7dp"
            app:strokeColor="?attr/colorOnTertiary"
            app:strokeWidth="0.5sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:textColor="?attr/colorPrimary"
            android:text="@string/view_info"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/info"
            app:iconTint="?attr/colorPrimary"
            app:cornerRadius="7dp"
            app:strokeColor="?attr/colorOnTertiary"
            app:strokeWidth="0.5sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:textColor="?attr/colorPrimary"
            android:text="@string/share"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/share"
            app:iconTint="?attr/colorPrimary"
            app:cornerRadius="7dp"
            app:strokeColor="?attr/colorOnTertiary"
            app:strokeWidth="0.5sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forbidden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorOnBackground"
            android:textColor="?attr/colorPrimary"
            android:text="@string/forbidden"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/round_close"
            app:iconTint="?attr/colorPrimary"
            app:cornerRadius="7dp"
            app:strokeColor="?attr/colorOnTertiary"
            app:strokeWidth="0.5sp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="7dp" />

</LinearLayout>