<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.update_dialog.UpdateActivity"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="18dp"
            android:paddingVertical="24dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/update"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/has_update"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/version_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:text="@string/version_change"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:insetTop="0dp"
                    android:insetBottom="0.8dp"
                    app:cornerRadius="9dp"
                    android:textSize="12sp"
                    android:paddingVertical="0dp"
                    android:text="@string/update_right_now"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    app:cornerRadius="9dp"
                    android:backgroundTint="@color/danger"
                    android:textSize="12sp"
                    android:paddingVertical="0dp"
                    android:text="@string/do_not_alert_this_version"/>

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <LinearLayout
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/progress_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/downloading_update"
                    android:layout_marginVertical="3dp"
                    android:textSize="12sp"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:progress="0"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:max="100"
                    />

                <TextView
                    android:id="@+id/progress_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0%"
                    android:layout_marginVertical="3dp"
                    android:textSize="11sp"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/install"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="12dp"
                android:insetTop="0dp"
                android:insetBottom="0.8dp"
                app:cornerRadius="9dp"
                android:textSize="12sp"
                android:paddingVertical="0dp"
                android:text="@string/install_update"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/close"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/round_close"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>